# system-extensions

./: .gitignore  Cargo.toml  README.md  build.rs
src/: core.rs  lib.rs
src/dialogues/: filebox.rs  messagebox.rs  mod.rs
src/internal/: mod.rs
src/internal/linux/: dialogues.rs  filebox.rs  mod.rs
src/internal/macos/: dialogues.rs
src/internal/windows/: dialogues.rs  filebox.rs  mod.rs  notifications.rs
src/metadata/: attribute.rs  mod.rs  time.rs
src/notifications/: mod.rs  notification.rs
src/processes/: mod.rs  processes.rs
test/: Cargo.toml  mac_test.rs
