[package]
name = "system-extensions"
version = "0.0.2"
authors = ["Ryandw11 <ryandw11@ryandw11.com>"]
edition = "2018"
license = "MIT"
description = "A robust set of extensions for operating system operations."
keywords = ["processes", "metadata", "file", "time", "os"]
repository = "https://github.com/ryandw11/system-extensions"
readme = "README.md"

exclude = ["test.txt"]

[features]
processes = []
metadata = []

[package.metadata.docs.rs]
all-features = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "fileapi", "tlhelp32", "errhandlingapi", "processthreadsapi", "winerror", "minwindef", "minwinbase", "synchapi", "handleapi", "sysinfoapi", "timezoneapi", "winnt", "impl-default"] }

[target.'cfg(unix)'.dependencies]
chrono = "0.4"