[package]
name = "system-extensions"
version = "0.0.3"
authors = ["Ryandw11 <ryandw11@ryandw11.com>"]
edition = "2018"
license = "MIT"
description = "A robust set of extensions for operating system operations."
keywords = ["processes", "metadata", "file", "time", "os", "dialogues", "open file"]
repository = "https://github.com/ryandw11/system-extensions"
readme = "README.md"

exclude = ["test.txt"]

[features]
processes = []
metadata = []
dialogues = []

[package.metadata.docs.rs]
all-features = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "commdlg", "fileapi", "tlhelp32", "errhandlingapi", "processthreadsapi", "winerror", "minwindef", "minwinbase", "synchapi", "handleapi", "sysinfoapi", "timezoneapi", "winnt", "impl-default"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[target.'cfg(unix)'.dependencies]
chrono = "0.4"
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.9.2"